# kopete-facebook

./: .gitignore  CMakeLists.txt  COPYING  README  README.md  facebookaccount.cpp  facebookaccount.h  facebookaccountpreferences.ui  facebookaddcontactpage.cpp  facebookaddcontactpage.h  facebookchatsession.cpp  facebookchatsession.h  facebookcontact.cpp  facebookcontact.h  facebookeditaccountwidget.cpp  facebookeditaccountwidget.h  facebookprotocol.cpp  facebookprotocol.h  kopete_facebook.desktop  test.cpp
cmake/modules/: FindQJson.cmake
facebook/: .#json.cpp  CMakeLists.txt  buddyinfo.cpp  buddyinfo.h  chatmessage.cpp  chatmessage.h  chatservice.cpp  chatservice.h
icons/: .directory  CMakeLists.txt
icons/.svn/: all-wcprops  dir-prop-base  entries
ui/: facebookadd.ui  facebookinfo.ui
